--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
                 <nav class="flex items-center justify-between mb-40">
                     <img src="assets/image/navbar-logo.png" alt="Logo">
 
-                    <button class="px-7 py-3 md:px-9 md:py-4 bg-white font-medium md:font-semibold text-gray-700 text-md rounded-md hover:bg-gray-700 hover:text-white transition ease-linear duration-500">Get my CV</button>
+                    <a href="https://www.google.com" target="_blank" class="px-7 py-3 md:px-9 md:py-4 bg-white font-medium md:font-semibold text-gray-700 text-md rounded-md hover:bg-gray-700 hover:text-white transition ease-linear duration-500">Get my CV</a>
+                    <!--Add cv link above-->
                 </nav>
+                
+                <footer class="py-10 md:py-16">
+                    <div class="container max-w-screen-xl mx-auto px-4">
+                        <p class="text-center text-gray-500 text-sm">© 2022 Bhavya Portfolio. All rights reserved.</p>
+                    </div>
+                </footer>
+            </body>
+        </html>
 
                 <div class="text-center">
                     <div class="flex justify-center mb-16">
@@ -402,10 +411,14 @@
                         <a href="#" class="w-16 h-16 flex items-center justify-center rounded-full hover:bg-gray-200 transition ease-in-out duration-500">
                             <i data-feather="instagram" class="text-gray-500 hover:text-gray-700 transition ease-in-out duration-500"></i>
                         </a>
+                        
                     </div>
+                    <p class="font-normal text-gray-400 text-md md:text-lg mb-20">© 2023 Bhavya Portfolio. All rights reserved.</p>
+
                 </div>
 
             </div>
+
 
         </footer>
 
