--- a/index.html
+++ b/index.html
@@ -22,15 +22,11 @@
                 <nav class="flex items-center justify-between mb-40">
                     <img src="assets/image/navbar-logo.png" alt="Logo">
 
-                    <a href="https://www.google.com" target="_blank" class="px-7 py-3 md:px-9 md:py-4 bg-white font-medium md:font-semibold text-gray-700 text-md rounded-md hover:bg-gray-700 hover:text-white transition ease-linear duration-500">Get my CV</a>
+                    <a href="contact.html" class="px-7 py-3 md:px-9 md:py-4 bg-white font-medium md:font-semibold text-gray-700 text-md rounded-md hover:bg-gray-700 hover:text-white transition ease-linear duration-500">Get in Touch</a>
                     <!--Add cv link above-->
                 </nav>
                 
-                <footer class="py-10 md:py-16">
-                    <div class="container max-w-screen-xl mx-auto px-4">
-                        <p class="text-center text-gray-500 text-sm">© 2022 Bhavya Portfolio. All rights reserved.</p>
-                    </div>
-                </footer>
+                
             </body>
         </html>
 
@@ -41,11 +37,10 @@
 
                     <h6 class="font-medium text-gray-600 text-lg md:text-2xl uppercase mb-8">Chappa Bhavya Sri</h6>
 
-                    <h1 class="font-normal text-gray-900 text-4xl md:text-7xl leading-none mb-8">Senior Backend Developer</h1>
+                    <h1 class="font-normal text-gray-900 text-4xl md:text-7xl leading-none mb-8">Data Analyst</h1>
 
-                    <p class="font-normal text-gray-600 text-md md:text-xl mb-16">I have a passion for software. I enjoy creating tools that make life easier for people.</p>
-
-                    <a href="#" class="px-7 py-3 md:px-9 md:py-4 font-medium md:font-semibold bg-gray-700 text-gray-50 text-sm rounded-md hover:bg-gray-50 hover:text-gray-700 transition ease-linear duration-500">Hire me</a>
+                    <p class="font-normal text-gray-600 text-md md:text-xl mb-16">Hey there i am a driven Economics and Mathematics graduate with a passion for leveraging AI solutions. Experienced in business development and research roles, adept at market analysis and content creation. Excels in fostering entrepreneurial mindsets and data-driven insights to drive strategic growth initiatives. Skilled in Python, SQL, and strategic planning frameworks.</p>
+                    <a href="https://drive.google.com/file/d/1jL4-8frlqp4jDvnqF_Twrz6fWNJsyEO6/view?usp=sharing " target="_blank" class="px-7 py-3 md:px-9 md:py-4 font-medium md:font-semibold bg-gray-700 text-gray-50 text-sm rounded-md hover:bg-gray-50 hover:text-gray-700 transition ease-linear duration-500">Get My CV</a>
                 </div>
 
             </div>
